@@ -2,6 +2,7 @@ TASpring change log
 
 0.next
 
+* [feature] A new group AI, "MexUpgrader AI" has been added. See http://taspring.clan-sy.com/wiki/MexUpgrader_AI for more info.
 * [feature] Custom unit icons are supported. See http://taspring.clan-sy.com/wiki/CustomUnitIcons for more info.
 * [bugfix] 'Quit and Resign' dialog now also appears when you're hosting, and stays hidden when the game is over.
 * [bugfix] Commands on enemy units (attack, reclaim) get canceled automatically when the unit leaves LOS / radar.
